review pass 148: fix NPE in DnaProposalService/RoleTemplateService/DnaRuleService, fix SpendLedger preUpdate data corruption, fix ScanUtils wrong exception type, add auth to NodeController.enroll and PatController.listPats, fix OrgController.erasure dead catch, standardize DnaProposalController base path, add null guards to DnaDomainService.split, fix FQN inconsistencies in WorkspaceService/NodeService, fix hardcoded system actor in OrgService, standardize Optional style in GroupService, fix wrong exception type in GroupService, fix non-portable charset in PatService, standardize string formatting in AskService, add @PreUpdate to append-only models, strengthen password policy, add security headers, fix trailing-slash public path handling, enforce HTTPS-only CORS origins, fix isFinite in Runs, fix fire-and-forget reloads in AskInbox/Memory/Groups, make updateGoalWindow async, fix RoleTemplateService.create actor param